test/tests/stages/18_structures/valid/no_structure_parameters/parse_and_lex/space_around_struct_member.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: foo
                  None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 0
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDot: 
                    TIdentifier: a
                    CVar: 
                      TIdentifier: foo
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: b
                  CSingleInit: 
                    CDot: 
                      TIdentifier: a
                      CVar: 
                        TIdentifier: foo
                        None: 
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CDot: 
                    TIdentifier: a
                    CVar: 
                      TIdentifier: foo
                      None: 
                    None: 
                  CVar: 
                    TIdentifier: b
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
